fix: general overflow removed

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,7 +1,6 @@
 @import 'variables';
 
 * {
-    overflow: hidden;
     margin: 0;
     padding: 0;
 }
